Fix up map sizing so it doesn't overflow on mobile

--- a/style/index.css
+++ b/style/index.css
@@ -93,10 +93,6 @@
   cursor: pointer;
 }
 
-.mapclass {
-    flex-grow: 1;
-}
-
 .placeholder {
     position: relative;
     font-family: monospace;
